--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Simple JS App</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.jsdelivr.net/es6-promise/4.1.1/es6-promise.auto.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/whatwg-fetch/2.0.4/fetch.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.1/es6-promise.auto.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.4/fetch.min.js"></script>
 </head>
 
 <body>
-
     <ul class="pokemon-list"></ul>
+    <button id="show-modal">Show modal</button>
+    <div id="modal-container">
+    </div>
     <script src="js/scripts.js"></script>
 </body>
 
